--- a/src/PatientPortal/app/components/comments/comments.html
+++ b/src/PatientPortal/app/components/comments/comments.html
@@ -1,18 +1,24 @@
-<div class="CommentPoster">
-    <form ng-submit="postComment()">
-        <div class="CommentEntry">
-            <label>Comment</label>
+<div class="col-md-4 col-md-offset-4">
+    <form ng-submit="postComment()" class="CommentEntry">
+        <div class="form-group">
+            <label for="comment">Comment</label>
             <br>
-            <input type="text" name="comment" placeholder="Write a Comment" ng-model="comment">
+            <textarea id="comment" type="text" name="comment" placeholder="Write a Comment" ng-model="comment" class="form-control" rows="5"></textarea>
             <br>
-            <button type="submit">Submit</button>
+            <input type="submit" class="btn btn-primary btn-lg center-block" value="Submit">
         </div>
     </form>
 </div>
+<div class="clearfix"></div>
 <div ng-repeat="(feedback, comments) in data">
-   <div class="comment" ng-repeat="comment in comments">
-       <p>{{comment.date}}</p>
-       <p>{{comment.time}}</p>
-       <p>{{comment.message}}</p>
-   </div>
+    <div ng-repeat="comment in comments">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="comment well">
+                <p class="commentDetails">Posted on {{comment.date}} at {{comment.time}}</p>
+                <hr>
+                <p class="commentMessage">{{comment.message}}</p>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 </div>
