--- a/src/CareProviderPortal/assests/css/homePage.css
+++ b/src/CareProviderPortal/assests/css/homePage.css
@@ -5,111 +5,117 @@ html, body {
     height:100%;
     width:100%;
 }
-.container{
-    width:100%;
-    height:100%;
-    margin:0;
-    padding:0;
+
+[ng\:cloak],[ng-cloak], .ng-cloak{
+    display: none;
 }
 
-.container .header{
-    width:80%;
-    height: 10%;
-    margin:0 0 0 10%;
-    padding:0;
 
-}
+@media all and (min-width:980px){
+    /*
+        #logo{
 
-.container .footer{
-    width:10%;
-    height: 10%;
-    margin:0 0 0 10%;
-    padding:0;
-}
-.container .content {
-    width:80%;
-    height: 79%;
-    margin-left: 10%;
-    border: solid 1px black;
-    overflow: hidden;
-}
+            border: solid 1px black;
+            height: 1%;
+        }
 
-.container  .content .leftSide {
-    width:49%;
-    height: 100%;
-    overflow: hidden;
-    margin:0;
-    padding:0;
-    float:left;
-}
-.container  .content .divider {
-    position:absolute;
-    left:50%;
-    top:11%;
-    bottom:11%;
-    border-left:1px dotted black;
+        #logo img{
+            width: 161px;
+            height: 1%;
+            border: solid 1px rebeccapurple;
+        }
+    */
+    #userInfo{
+        margin:0;
+        padding:0;
+    }
+
+    #WelcomeMessage{
+        font-size: 4.5vh;
+        margin:0;
+        padding:0;
+        border: none;
+    }
+
+    #userInfo #Consultant{
+        font-size: 1.5vh;
+        margin:0;
+        padding:0;
+        border: none;
+    }
 }
 
-.container  .content .rightSide {
-    width:49%;
-    height: 100%;
-    overflow: hidden;
-    margin:0;
-    padding:0;
+.active{
+    color: white;
+    background-color: #0b85dc;
 }
 
-.loginBox{
-    position: relative;
-    width:50%;
-    border: solid 1px black;
-    padding: 0 0 1% 0;
-    border-radius: 6px;
-    left: 25%;
-    top:25%;
+#container-fluid{
+    margin-bottom: 60px !important;
 }
 
-.LogIn_message{
-    position: relative;
-    width: 100%;
-    border-bottom: solid 1px #ccc;
-    margin-bottom: 5%;
-    padding: 0;
-    text-align : center;
+#Logout{
+    text-align: right;
 }
 
-form{
-    width: 100%;
-    margin-left: 22.5%;
-}
-form input[type="text"], textarea {
-    width:50%;
-    border: solid 1px #ccc;
-    padding: 1.5%;
-    background-color: white;
-    box-shadow: inset 0 2px 3px rgba(0,0,0,0.2);
-    margin-bottom: 0.5%;
-}
-
-form input[type="password"], textarea {
-    width:50%;
-    border: solid 1px #ccc;
-    padding: 1.5%;
-    background-color: white;
-    box-shadow: inset 0 2px 3px rgba(0,0,0,0.2);
-    margin: 0 auto;
-}
-
-form input[type="submit"], input[type="button"] {
-    width:30%;
-    padding:0.5em 1em;
-    cursor:pointer;
-    border-radius:4px;
+#Logout a{
+    margin: 15% 5% 0 0;
     color: black;
-    font-weight:bold;
-    border:solid 1px #ccc;
-    box-shadow:0 1px 5px rgba(0,0,0,0.2);
-    background-color: #3fa9f5;
-    margin-left: 10%;
-    font-size: 90%;
-    margin-top: 4%;
+    text-decoration: none;
+}
+
+#header #Logout a:visited{
+    color: black;
+    text-decoration: none;
+}
+
+.padding{
+    width: 100%;
+    height: 30px;
+}
+
+#footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 30px;
+    background-color: #0b85dc;
+}
+
+.targets{
+    position: relative;
+    float:left;
+    padding-right: 10px;
+}
+
+.exerciseBox{
+    border: solid 1px black;
+    padding: 0;
+    margin: 1% 0;
+    float: left;
+}
+
+.exerciseBox:hover{
+    cursor: pointer;
+}
+
+.exerciseBox img{
+    display: block;
+    margin: 0;
+    padding: 0;
+    width:100%;
+    float: left;
+}
+
+.exerciseBox p{
+    text-transform: capitalize;
+    text-align: center;
+    padding: 1.5% 0;
+    margin: 0;
+    font-size: 1.5em;
+}
+
+.splitter{
+    margin-bottom:0 ;
 }
