--- a/src/CareProviderPortal/app/components/report/reports.html
+++ b/src/CareProviderPortal/app/components/report/reports.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-md-offset-3">
         <ul class="nav nav-pills nav-justified">
             <li><a ng-class="{ active: isActive('addGraph') }" ng-click="addGraph('.modal-parent')">Add Graph</a></li>
-            <li><a ng-class="{ active: isActive('addTable') }" ng-click="addTable()">Add Table</a></li>
+            <li><a ng-class="{ active: isActive('addTable') }" ng-click="addTable('.modal-parent')">Add Table</a></li>
             <li><a ng-class="{ active: isActive('exportReport') }" ng-click="exportReport()">Export Report</a></li>
         </ul>
     </div>
@@ -11,5 +11,3 @@
     <div class="modal-parent"></div>
 </div>
 
-<script type="text/javascript" src="./assests/libs/highcharts.js"></script>
-<script type="text/javascript" src="./assests/libs/grouped-categories.js"></script>
