--- a/src/CareProviderPortal/app/components/report/addGraph.html
+++ b/src/CareProviderPortal/app/components/report/addGraph.html
@@ -12,13 +12,8 @@
     <form name="GraphAdditionForm">
         <fieldset class="col-md-12">
             <div class="form-group">
-                <label class="col-md-2 col-form-label" for="graphSelection">Graph Type:</label>
-                <select id ="graphSelection" name="graphType" class="custom-select">
-                    <option value="Bar Chart">Bar Chart</option>
-                    <option value="Area Range">Area Range</option>
-                    <option value="Column Drilldown">Column Drilldown</option>
-                    <option value="spline">spline</option>
-                </select>
+                <label class="col-md-2 col-form-label" for="graphName">Graph Title:</label>
+                <input id ="graphName" name="graphTitle">
             </div>
 
             <div class="form-group">
