--- a/src/CareProviderPortal/app/components/report/addTable.html
+++ b/src/CareProviderPortal/app/components/report/addTable.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">Add Graphic Form</h4>
+    <h4 class="modal-title">Add Table Form</h4>
 </div>
 <div class="modal-body row">
     <div ng-show="$tableForm.hasErrors()">
@@ -11,6 +11,11 @@
     </div>
     <form name="tableAdditionForm">
         <fieldset class="col-md-12">
+            <div class="form-group">
+                <label class="col-md-2 col-form-label" for="tableName">Table Title:</label>
+                <input id ="tableName" name="tableTitle">
+            </div>
+
             <div class="form-group">
                 <label class="col-form-label col-md-2" for="exercise">Exercise:</label><select id="exercise" name="selectedExerciseName" ng-model="selectedExerciseName" ng-init="selectedExercise = ''" class="custom-select" required>
                 <option ng-repeat="exercise in $tableForm.exercises" value="{{exercise.Name}}">{{exercise.Name}}</option>
@@ -87,6 +92,6 @@
 </div>
 
 <div class="modal-footer">
-    <button type="button" class="btn btn-success pull-left" ng-click="$tableForm.ok()">Add Graph</button>
+    <button type="button" class="btn btn-success pull-left" ng-click="$tableForm.ok()">Add Table</button>
     <button type="button" class="btn btn-danger" ng-click="$tableForm.cancel()">Close</button>
 </div>
